--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "firebase": "^10.8.0",
+    "firebase-tools": "^13.3.0",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
