--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "ethers": "^5.0.0",
     "firebase": "^10.8.0",
     "firebase-tools": "^13.3.0",
     "framer-motion": "^11.0.5",
